# sbpy

./: .gitignore  .pep8speaks.yml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  README.rst~  ah_bootstrap.py  appveyor.yml  pep8speaks.yml  pip-requirements  pyproject.toml  readthedocs.yml  requirements.txt  sbpy.py  setup.cfg  setup.py  test.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/scripts/: download-oorb-data.py
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml  oorb_data.yml  open_actions.yml
docs/: about.rst  api_reference.rst  compile_fieldnames.py  conf.py  contributing.rst  fieldnames.rst  index.rst  install.rst  robots.txt  status.rst  structure.rst  substitutions.txt
docs/api/: sbpy.activity.Activity.rst  sbpy.activity.ActivityClass.rst  sbpy.activity.Aperture.rst  sbpy.activity.Haser.rst  sbpy.activity.Species.rst  sbpy.activity.Syndynes.rst  sbpy.activity.Vectorial.rst  sbpy.bib.Bib.rst  sbpy.bib.register.rst  sbpy.bib.reset.rst  sbpy.bib.status.rst  sbpy.bib.stop.rst  sbpy.bib.to_bibtex.rst  sbpy.bib.to_text.rst  sbpy.bib.track.rst  sbpy.data.DataClass.rst  sbpy.data.Ephem.rst  sbpy.data.Misc.rst  sbpy.data.Orbit.rst  sbpy.data.Phys.rst  sbpy.data.image_search.rst  sbpy.data.mpc_observations.rst  sbpy.data.pds_ferret.rst  sbpy.data.sb_search.rst  sbpy.imageanalysis.CometEnhancement.rst  sbpy.imageanalysis.CometaryEnhancement.rst  sbpy.imageanalysis.PSFSubtraction.rst  sbpy.imageanalysis.centroid.rst  sbpy.obsutil.Obsutil.rst  sbpy.photometry.DiskFunctionModel.rst  sbpy.photometry.DiskIntegratedModelClass.rst  sbpy.photometry.HG.rst  sbpy.photometry.HG12.rst  sbpy.photometry.HG1G2.rst  sbpy.photometry.Lambert.rst  sbpy.photometry.LommelSeeliger.rst  sbpy.photometry.ModelClass.rst  sbpy.photometry.PhaseFunctionModel.rst  sbpy.photometry.Photometry.rst  sbpy.photometry.ROLO.rst  (+13 more)
docs/development/: design-principles.rst  index.rst
docs/sbpy/: activity.rst  bib.rst  calib.rst  data.rst  dynamics.rst  exceptions.rst  imageanalysis.rst  index.rst  obsutil.rst  photometry.rst  shape.rst  spectroscopy.rst  surfaces.rst  thermal.rst  time.rst  units.rst  utils.rst
docs/sbpy/activity/: dust.rst  gas.rst  index.rst
docs/sbpy/data/: dastcom5.rst  dataclass.rst  ephem.rst  ephem_obs.rst  fieldnames.rst  index.rst  names.rst  obs.rst  orbit.rst  phys.rst
docs/sbpy/spectroscopy/: index.rst  sources.rst
examples/: README.rst
examples/activity/: README.rst  estimating-coma-continuum.ipynb  haser-model.ipynb  vectorial-model.ipynb  vectorial_model.ipynb
examples/data/: sun.ipynb
licenses/: LICENSE.rst  README.rst
logo/: LICENSE
publications/joss/: paper.bib  paper.md
recipe/: meta.yaml
sbpy/: Reference.py  __init__.py  _astropy_init.py  conftest.py  cython_version.py  example_c.c  exceptions.py  time.py  version.py
sbpy/_dev/: __init__.py  scm_version.py
sbpy/activity/: #activity.py#  __init__.py  activity.py  core.py  dust.py  gas.py  setup_package.py
sbpy/activity/gas/: __init__.py  core.py  productionrate.py  setup_package.py
sbpy/activity/tests/: setup_package.py  test_core.py  test_dust.py  test_gas.py
sbpy/bib/: __init__.py  bib.py  core.py
sbpy/bib/tests/: test_bib.py
sbpy/calib/: __init__.py  core.py  setup_package.py  solar_sources.py  vega_sources.py
sbpy/calib/data/: alpha_lyr_stis_008-edit.fits  e490-00a_2014_lores.csv  e490-00a_2014_table4.txt  solar-photometry-willmer2018.csv  solar-photometry-willmer2018.json  vega-photometry-willmer2018.csv  vega-photometry-willmer2018.json
sbpy/calib/sun/: __init__.py  core.py  setup_package.py  sources.py
sbpy/calib/test/: test_core.py
sbpy/calib/tests/: test_core.py  test_sun.py  test_vega.py
sbpy/calib/vega/: __init__.py  core.py  setup_package.py  sources.py
sbpy/dastcom5/: __init__.py  dastcom5.py
sbpy/dastcom5/tests/: test_dastcom5.py
sbpy/data/: #__init__.py#  __init__.py  core.py  data.py  decorators.py  dimensions.py  ephem.py  fieldnames.rst  names.py  obs.py  orbit.py  phys.py  sun.py
sbpy/data/ephem/: __init__.py  cli.py  core.py
sbpy/data/names/: __init__.py
sbpy/data/tests/: setup_package.py  test_data.py  test_dataclass.py  test_decorator.py  test_decorators.py  test_ephem.py  test_ephem_cli.py  test_ephem_cli_remote.py  test_ephem_remote.py  test_names.py  test_obs_remote.py  test_orbit.py  test_orbit_remote.py  test_phys_remote.py  test_sun.py
sbpy/data/utils/: __init__.py  dastcom5.py
sbpy/dynamics/: __init__.py  models.py  state.py  syndynes.py
sbpy/dynamics/tests/: test_models.py  test_state.py  test_syndynes.py
sbpy/example_subpkg/: setup_package.py
sbpy/ginga_plugins/: CometaryEnhancements.py  __init__.py
sbpy/imageanalysis/: __init__.py  core.py  imageanalysis.py  utils.py
sbpy/imageanalysis/tests/: test_utils.py
sbpy/obsutil/: __init__.py  core.py  obsutil.py
sbpy/photometry/: __init__.py  bandpass.py  calibration.py  core.py  hapke.py  hb.py  iau.py  photometry.py  setup_package.py
sbpy/photometry/data/: 2mass-h-rsr.txt  2mass-j-rsr.txt  2mass-ks-rsr.txt  README  WISE-RSR-W1.EE.txt  WISE-RSR-W2.EE.txt  WISE-RSR-W3.EE.txt  WISE-RSR-W4.EE.txt  atlas-c.txt  atlas-o.txt  cousins_r_004_syn.fits  hb-bc.txt  hb-c2.txt  hb-c3.txt  hb-cn.txt  hb-co+.txt  hb-gc.txt  hb-h2o+.txt  hb-nh.txt  hb-oh.txt  hb-rc.txt  hb-uc.txt  johnson_b_004_syn.fits  johnson_u_004_syn.fits  (+12 more)
sbpy/shape/: __init__.py  core.py  shape.py  sphere.py  transformations.py
sbpy/spectroscopy/: __init__.py  coma.py  core.py  setup_package.py  sources.py  spectroscopy.py
sbpy/surfaces/: __init__.py  lambertian.py  scattered.py  surface.py  thermal.py
sbpy/tests/: helper.py  test_time.py
sbpy/thermal/: __init__.py  core.py  models.py  neatm.py  thermal.py
sbpy/units/: __init__.py  core.py  physical.py  typing.py
sbpy/utils/: __init__.py  core.py  decorators.py
website/: .firebaserc  README.md
website/.firebase/: hosting.cHVibGlj.cache
website/public/: about.html  index.html  team.html
(+72 files in other folders)
