[project]
name = "sbpy"
description = "An Astropy affiliated package for small-body planetary astronomy"
readme = "README.rst"
authors = [{ name = "sbpy team", email = "msk@astro.umd.edu" }]
license = "BSD-3-Clause"
license-files = ["LICENSE.rst", "licenses/*.rst"]
requires-python = ">=3.10"
dependencies = ["numpy>1.26.0", "astropy>=5.3.3"]
dynamic = ["version"]
keywords = [
    "astronomy",
    "astrophysics",
    "planetary",
    "asteroid",
    "comet",
    "space",
    "science",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
homepage = "https://sbpy.org"
documentation = "https://sbpy.readthedocs.io/"
repository = "https://github.com/NASA-Planetary-Science/sbpy"

[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sbpy/_version.py"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
sbpy = ["*.fits", "*.csv", "*.txt"]

[project.optional-dependencies]
recommended = [
    "ads>=0.12",
    "astroquery>=0.4.5",
    "scipy>=1.10",
    "synphot>=1.1.1",
]
all = [
    "ads>=0.12",
    "astroquery>=0.4.5",
    "ginga",
    "photutils",
    # "pyoorb",
    "pyyaml",
    "scipy>=1.10",
    "synphot>=1.1.1",
]
test = [
    "pytest>=8.0",
    "pytest-astropy>=0.10",
    "pytest-astropy-header>=0.2.1",
    "pytest-doctestplus>=1.6",
    "pytest-remotedata",
    "pytest-xdist",
    "coverage",
]
docs = [
    "sbpy[all,test]",
    "astropy!=6.1.*",
    "matplotlib>=3.8",
    "packaging",
    "scipy>=1.10",
    "sphinx-astropy>=1.9.1",
    "sphinx-changelog>=1.2.0",
    "sphinx_design",
    "sphinxcontrib-globalsubs >= 0.1.1",
]

[project.scripts]
sbpy-ephem = "sbpy.data.ephem.cli:EphemerisCLI.run"

[project.entry-points."ginga.rv.plugins"]
cometaryenhancements = "sbpy.ginga_plugins:setup_cometaryenhancements"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["sbpy", "docs"]
norecursedirs = ["docs[\\/]_build"]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
remote_data_strict = true
addopts = ["--doctest-rst", "--doctest-plus", "--color=yes"]
xfail_strict = true
filterwarnings = [
    "ignore:numpy.ufunc size changed:RuntimeWarning",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]
doctest_norecursedirs = [
    "*/setup_package.py",
    "docs/_build",
    "*/compile_fieldnames.py",
]

[tool.coverage]
[tool.coverage.run]
omit = [
    "sbpy/__init__*",
    "sbpy/**/conftest.py",
    "sbpy/**/tests/*",
    "sbpy/extern/*",
    "sbpy/version*",
    "*/sbpy/__init__*",
    "*/sbpy/**/conftest.py",
    "*/sbpy/**/tests/*",
    "*/sbpy/extern/*",
    "*/sbpy/version*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "'def main(.*):'",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
    # typing.TYPE_CHECKING is False at runtime
    "if TYPE_CHECKING:",
    # Ignore typing overloads
    "@overload",
]
