
[metadata]
name = sbpy
package_name = sbpy
author = sbpy team
author_email = msk@astro.umd.edu
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sbpy.org
description = Python module for small-body planetary astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = NASA-Planetary-Science/sbpy
keywords = astronomy, astrophysics, planetary, asteroid, comet, space, science
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_save = False
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17.0
    astropy>=4.0
    ads>=0.12
    synphot>=1.0
    matplotlib>=3.0
    astroquery>=0.4.2.dev6218
#    pyoorb @ https://github.com/mkelley/pyoorb-experiment/archive/refs/heads/main.zip
include_package_data = True

#[options.entry_points]
#console_scripts =
#    fits2bitmap = astropy.visualization.scripts.fits2bitmap:main

[options.extras_require]
all =
    scipy
    ginga
    photutils
    pyyaml
test =
    pytest>=4.6
    pytest-astropy
    pytest-doctestplus
    pytest-remotedata
    pytst-xdist
    coverage
docs =
    sphinx-astropy>=1.3
    pytest
    matplotlib>=3.0

[options.package_data]
* = *.fits *.csv *.txt

# [build_sphinx]
# source-dir = docs
# build-dir = docs/_build
# all_files = 1

# [build_docs]
# source-dir = docs
# build-dir = docs/_build
# all_files = 1

# [upload_docs]
# upload-dir = docs/_build/html
# show-response = 1

[tool:pytest]
minversion = 4.6
testpaths = "sbpy" "docs"
norecursedirs =
    "docs[\/]_build"
    "docs[\/]generated"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --doctest-plus --ignore=compile_fieldnames.py
remote_data_strict = true
doctest_norecursedirs =
    */setup_package.py

# [tool:pytest]
# minversion = 3.1
# norecursedirs = build docs/_build
# doctest_plus = enabled
# addopts = -p no:warnings

[coverage:run]
omit =
    sbpy/_astropy_init*
    sbpy/conftest.py
    sbpy/*setup_package*
    sbpy/tests/*
    sbpy/*/tests/*
    sbpy/*/*/tests/*
    sbpy/extern/*
    sbpy/version*
    */sbpy/_astropy_init*
    */sbpy/conftest.py
    */sbpy/*setup_package*
    */sbpy/tests/*
    */sbpy/*/tests/*
    */sbpy/*/*/tests/*
    */sbpy/extern/*
    */sbpy/version*


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

# open_files_ignore = "astropy.log" "/etc/hosts" "*.ttf"
# filterwarnings =
#     error
#     ignore:unclosed file:ResourceWarning
#     ignore:unclosed <socket:ResourceWarning
#     ignore:unclosed <ssl.SSLSocket:ResourceWarning
#     ignore:The timefunc function is deprecated
#     ignore:numpy.ufunc size changed:RuntimeWarning
#     ignore:Importing from numpy:DeprecationWarning:scipy
#     ignore:Conversion of the second argument:FutureWarning:scipy
#     ignore:Using a non-tuple sequence:FutureWarning:scipy
#     ignore:Using or importing the ABCs from 'collections':DeprecationWarning
#     ignore:can't resolve package from __spec__
#     ignore:PY_SSIZE_T_CLEAN will be required for '#' formats
#     ignore:::astropy.tests.plugins.display
#     ignore:::astropy.tests.disable_internet

# [pycodestyle]
# select = E101,E111,E112,E113,E124,E201,E202,E203,E211,E221,E225,E231,E241,E251,E261,E265,E271,E272,E301,E302,E303,E305,E502,E703,E711,E712,E714,E722,E901,E902,W191,W291,W292,W293,W391

# Ignore following error codes:
# E402: module level import not at top of file
# E741: single-letter small-caps
# E226: missing whitespace around arithmetic operator
# E501: line too long
# ignore = E402,E741,E226,E501
