
[metadata]
name = sbpy
package_name = sbpy
author = sbpy team
author_email = msk@astro.umd.edu
license = BSD 3-Clause
license_files =
    LICENSE.rst
url = https://sbpy.org
description = Python module for small-body planetary astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = NASA-Planetary-Science/sbpy
keywords = astronomy, astrophysics, planetary, asteroid, comet, space, science
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_save = False
python_requires = >=3.8
setup_requires = setuptools_scm

# keep requirements in synchronization with docs/install.rst
install_requires =
    numpy>=1.18.0
    astropy>=4.3
include_package_data = True

[options.extras_require]
recommended =
    ads>=0.12
    astroquery>=0.4.5
    scipy>=1.4
    synphot>=1.1.1
all =
    ads>=0.12
    astroquery>=0.4.5
    ginga
    photutils
    pyyaml
    scipy>=1.4
    synphot>=1.1.1
test =
    pytest>=7.0
    pytest-astropy
    pytest-doctestplus>=0.10
    pytest-remotedata
    pytest-xdist
    coverage
docs =
    pytest>=7.0
    matplotlib>=3.1
    sphinx-astropy>=1.3,!=1.9.0
    scipy>=1.4

[options.package_data]
* = *.fits *.csv *.txt

[options.entry_points]
ginga.rv.plugins =
    cometaryenhancements = sbpy.ginga_plugins:setup_cometaryenhancements

[tool:pytest]
minversion = 7.0
testpaths = "sbpy" "docs"
norecursedirs = docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
remote_data_strict = true
addopts = --doctest-rst --doctest-plus --ignore-glob="*/compile_fieldnames.py" --color=yes
xfail_strict = true
doctest_norecursedirs =
    */setup_package.py
    docs/_build
filterwarnings =
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning

# The following is to work around an issue building the documentation (see
# #383).  The prefered approach is to use doctest-requires at the code-block
# level (e.g., this marks all orbit.rst tests as needed oorb, but only 2 of 9
# blocks require it).  Relevant doctest-requires directives have been commented
# out.
doctest_subpackage_requires =
    docs/sbpy/photometry.rst = astroquery
    docs/sbpy/data/ephem.rst = astroquery
    docs/sbpy/data/obs.rst = astroquery
    docs/sbpy/data/orbit.rst = astroquery,oorb
    docs/sbpy/data/phys.rst = astroquery

# [coverage:run]
# omit =
#     sbpy/_astropy_init*
#     sbpy/conftest.py
#     sbpy/*setup_package*
#     sbpy/tests/*
#     sbpy/*/tests/*
#     sbpy/*/*/tests/*
#     sbpy/extern/*
#     sbpy/version*
#     */sbpy/_astropy_init*
#     */sbpy/conftest.py
#     */sbpy/*setup_package*
#     */sbpy/tests/*
#     */sbpy/*/tests/*
#     */sbpy/*/*/tests/*
#     */sbpy/extern/*
#     */sbpy/version*


# [coverage:report]
# exclude_lines =
#     # Have to re-enable the standard pragma
#     pragma: no cover
#     # Don't complain about packages we have installed
#     except ImportError
#     # Don't complain if tests don't hit assertions
#     raise AssertionError
#     raise NotImplementedError
#     # Don't complain about script hooks
#     def main\(.*\):
#     # Ignore branches that don't pertain to this version of Python
#     pragma: py{ignore_python_version}
#     # Don't complain about IPython completion helper
#     def _ipython_key_completions_

# open_files_ignore = "astropy.log" "/etc/hosts" "*.ttf"
# filterwarnings =
#     error
#     ignore:unclosed file:ResourceWarning
#     ignore:unclosed <socket:ResourceWarning
#     ignore:unclosed <ssl.SSLSocket:ResourceWarning
#     ignore:The timefunc function is deprecated
#     ignore:numpy.ufunc size changed:RuntimeWarning
#     ignore:Importing from numpy:DeprecationWarning:scipy
#     ignore:Conversion of the second argument:FutureWarning:scipy
#     ignore:Using a non-tuple sequence:FutureWarning:scipy
#     ignore:Using or importing the ABCs from 'collections':DeprecationWarning
#     ignore:can't resolve package from __spec__
#     ignore:PY_SSIZE_T_CLEAN will be required for '#' formats
#     ignore:::astropy.tests.plugins.display
#     ignore:::astropy.tests.disable_internet

# [pycodestyle]
# select = E101,E111,E112,E113,E124,E201,E202,E203,E211,E221,E225,E231,E241,E251,E261,E265,E271,E272,E301,E302,E303,E305,E502,E703,E711,E712,E714,E722,E901,E902,W191,W291,W292,W293,W391

# Ignore following error codes:
# E402: module level import not at top of file
# E741: single-letter small-caps
# E226: missing whitespace around arithmetic operator
# E501: line too long
# ignore = E402,E741,E226,E501
